// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders correctly Horizontal display with align 1`] = `
<div
  className="container directionRow justifyStart alignEnd"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with align 2`] = `
<div
  className="container directionRow justifyStart alignEnd"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with children 1`] = `
<div
  className="container directionRow justifyStart alignCenter"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with flex 1`] = `
<div
  className="container directionRow justifyStart alignCenter"
  style={{}}
>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 1,
        "flexShrink": 0,
      }
    }
  >
    1
  </div>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 0,
        "flexShrink": 1,
      }
    }
  >
    2
  </div>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 0,
        "flexShrink": 1,
      }
    }
  >
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with gap 1`] = `
<div
  className="container directionRow justifyStart alignCenter"
  style={
    {
      "gap": "var(--spacing-large)",
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with justify 1`] = `
<div
  className="container directionRow justifySpaceBetween alignCenter"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with wrap 1`] = `
<div
  className="container directionRow justifyStart alignCenter wrap"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with align 1`] = `
<div
  className="container directionColumn justifyStart alignEnd"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with children 1`] = `
<div
  className="container directionColumn justifyStart alignCenter"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with flex 1`] = `
<div
  className="container directionColumn justifyStart alignCenter"
  style={{}}
>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 1,
        "flexShrink": 0,
      }
    }
  >
    1
  </div>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 0,
        "flexShrink": 1,
      }
    }
  >
    2
  </div>
  <div
    className="container directionRow justifyStart alignCenter"
    style={
      {
        "flexBasis": "auto",
        "flexGrow": 0,
        "flexShrink": 1,
      }
    }
  >
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with justify 1`] = `
<div
  className="container directionColumn justifySpaceBetween alignCenter"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with wrap 1`] = `
<div
  className="container directionColumn justifyStart alignCenter wrap"
  style={{}}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly with data-testid 1`] = `
<div
  className="container directionRow justifyStart alignCenter"
  data-testid="test"
  style={{}}
/>
`;

exports[`Flex renders correctly with empty props 1`] = `
<div
  className="container directionRow justifyStart alignCenter"
  style={{}}
/>
`;
